src/styles.css
/** General classes **/

body {
	font-family: 'Ubuntu', 'Gudea', sans-serif;
	overflow-x: hidden;
	color: 212121;
	background-color: #ffffff;
	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3Crect stroke='%23ffffff' stroke-width='0.39' width='1' height='1' id='s'/%3E%3Cpattern id='a' width='3' height='3' patternUnits='userSpaceOnUse' patternTransform='scale(24.65) translate(-959.43 -719.57)'%3E%3Cuse fill='%23fafafa' href='%23s' y='2'/%3E%3Cuse fill='%23fafafa' href='%23s' x='1' y='2'/%3E%3Cuse fill='%23f5f5f5' href='%23s' x='2' y='2'/%3E%3Cuse fill='%23f5f5f5' href='%23s'/%3E%3Cuse fill='%23f0f0f0' href='%23s' x='2'/%3E%3Cuse fill='%23f0f0f0' href='%23s' x='1' y='1'/%3E%3C/pattern%3E%3Cpattern id='b' width='7' height='11' patternUnits='userSpaceOnUse' patternTransform='scale(24.65) translate(-959.43 -719.57)'%3E%3Cg fill='%23ebebeb'%3E%3Cuse href='%23s'/%3E%3Cuse href='%23s' y='5' /%3E%3Cuse href='%23s' x='1' y='10'/%3E%3Cuse href='%23s' x='2' y='1'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='8'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='5' y='2'/%3E%3Cuse href='%23s' x='5' y='6'/%3E%3Cuse href='%23s' x='6' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='h' width='5' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(24.65) translate(-959.43 -719.57)'%3E%3Cg fill='%23ebebeb'%3E%3Cuse href='%23s' y='5'/%3E%3Cuse href='%23s' y='8'/%3E%3Cuse href='%23s' x='1' y='1'/%3E%3Cuse href='%23s' x='1' y='9'/%3E%3Cuse href='%23s' x='1' y='12'/%3E%3Cuse href='%23s' x='2'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='2'/%3E%3Cuse href='%23s' x='3' y='6'/%3E%3Cuse href='%23s' x='3' y='11'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='4' y='10'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='c' width='17' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(24.65) translate(-959.43 -719.57)'%3E%3Cg fill='%23e5e5e5'%3E%3Cuse href='%23s' y='11'/%3E%3Cuse href='%23s' x='2' y='9'/%3E%3Cuse href='%23s' x='5' y='12'/%3E%3Cuse href='%23s' x='9' y='4'/%3E%3Cuse href='%23s' x='12' y='1'/%3E%3Cuse href='%23s' x='16' y='6'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='d' width='19' height='17' patternUnits='userSpaceOnUse' patternTransform='scale(24.65) translate(-959.43 -719.57)'%3E%3Cg fill='%23ffffff'%3E%3Cuse href='%23s' y='9'/%3E%3Cuse href='%23s' x='16' y='5'/%3E%3Cuse href='%23s' x='14' y='2'/%3E%3Cuse href='%23s' x='11' y='11'/%3E%3Cuse href='%23s' x='6' y='14'/%3E%3C/g%3E%3Cg fill='%23e0e0e0'%3E%3Cuse href='%23s' x='3' y='13'/%3E%3Cuse href='%23s' x='9' y='7'/%3E%3Cuse href='%23s' x='13' y='10'/%3E%3Cuse href='%23s' x='15' y='4'/%3E%3Cuse href='%23s' x='18' y='1'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='e' width='47' height='53' patternUnits='userSpaceOnUse' patternTransform='scale(24.65) translate(-959.43 -719.57)'%3E%3Cg fill='%23ffdb19'%3E%3Cuse href='%23s' x='2' y='5'/%3E%3Cuse href='%23s' x='16' y='38'/%3E%3Cuse href='%23s' x='46' y='42'/%3E%3Cuse href='%23s' x='29' y='20'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='f' width='59' height='71' patternUnits='userSpaceOnUse' patternTransform='scale(24.65) translate(-959.43 -719.57)'%3E%3Cg fill='%23ffdb19'%3E%3Cuse href='%23s' x='33' y='13'/%3E%3Cuse href='%23s' x='27' y='54'/%3E%3Cuse href='%23s' x='55' y='55'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='g' width='139' height='97' patternUnits='userSpaceOnUse' patternTransform='scale(24.65) translate(-959.43 -719.57)'%3E%3Cg fill='%23ffdb19'%3E%3Cuse href='%23s' x='11' y='8'/%3E%3Cuse href='%23s' x='51' y='13'/%3E%3Cuse href='%23s' x='17' y='73'/%3E%3Cuse href='%23s' x='99' y='57'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23b)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23h)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23c)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23d)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23e)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23f)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23g)' width='100%25' height='100%25'/%3E%3C/svg%3E");
	background-attachment: fixed;
	background-size: cover;
}

h1,h2,h3 {
	font-family: 'Gudea', sans-serif;
}

.m-1 {
  margin: 10px;
}

.m-left-0 { 
	margin-left: 0 !important; 
}

.text-yellow {
  color: #FFEB3B;
}

.text-white {
	color: #fafafa;
}

.text-dark {
	color: #212121;
}

.text-center {
	text-align: center;
}

.text-end {
	text-align: end;
}

.flex {
	display: flex;
}


.relative {
	position: relative;
}

.flex-col {
	flex-direction: column;
}

.flexd-wrap {
	flex-wrap: wrap;
}

.justify-center {
	justify-content: center;
}

.justify-end {
	justify-content: flex-end;
}

.justify-between {
	justify-content: space-between;
}

.justifyt-around {
	justify-content: space-around;
}

.items-center {
	align-items: center;
}

.self-end {
	align-self: flex-end;
}

.self-start {
	align-self: flex-start;
}

.h-full {
  height: 100vh;
}

.w-full {
	width: 100vw;
}

.h-100 {
	height: 100%;
}

.w-100 {
    width: 100%;
}

.w-fifty {
	width: 50%;
}

.w-50 {
	width: 50vw;
}

.relatve {
	position: relative;
}

.hero-header {
  background-color: #000000;
  background-image: url('../theteam.webp');
  background-size: cover;
  position: relative;
}

.overlay {
 background-color: rgba(0,0,0,0.7);
 position: absolute;
 top: 0;
 left: 0;
}

.overlay-light {
	background-color: rgba(0,0,0,0.3);
}

/* diag */

.diagonal {
  position: absolute;
  right: 0;
  background: transparent;
  height: 100vh;
  width: 60vw;
  background-color: #212121;
  -webkit-clip-path: polygon(84% 0, 100% 0, 100% 100%, 0% 100%);
  clip-path: polygon(84% 0, 100% 0, 100% 100%, 0% 100%);
}

.diagonal-clinic {
	background-image: url('../clinic.webp');
	background-repeat: no-repeat;
	background-size: cover;
}

/* header */

.div-content {
	width: 100%;
}

.h1 {
  font-size: 3.1rem;
  letter-spacing: 1px;
  margin: 0;
  text-align: start;
  display: inline;
  margin-bottom: 10px;
  text-align: center;
}

.h1-cornern {
	position: absolute;
	top: 1%;
	left: 1%;
}

.h2 {
  font-size: 1.4rem;
  font-weight: 700;
  text-align: start;
}

.h2 > span {
	margin-left: 3px
}

.header-text {
	width: 40%;
	margin-left: 2%;
	padding: 15px;
}

.p {
	letter-spacing: 1px;
	width: 70%;
	font-size: 20px;
}

.ul {
	font-size: 20px;
	font-family: 'Ubuntu';
	letter-spacing: 2px;
}

/* whatdo */

.container-whatdo {
background-color: transparent;

min-height: 100vh;
}

.div-whatdo {
	padding: 50px;
}

.div-whatdo > .p {
	letter-spacing: 2px;
	font-size: 23px;
}

.badges {
  margin: 75px 0 0 0;
}

.badges > i {
	font-size: 85px;
	margin: 0 30px 0 0;
}

/* products */

.products-container {
	background-color: #ffffff;

}

.product-title {
  font-weight: normal;
  letter-spacing: 1px;
  color: #212121;
}

.product-title > span {
	font-weight: 'Ubuntu', sans-serif;
	font-size: 18px;
}

.img-product {
	min-width: 300px;
	max-width: 600px;
	height: auto;
}

.p-small {
	font-size: 15px;
}

/* buttons */

.button {
	border-style: solid;
	border-width: thin;
	background-color: transparent;
	width: 180px;
	height: 45px;
	color: #FAFAFA;
	margin: 5px;
	cursor: pointer;
	font-weight: 500;
}

.button-yellow {
	border-color: #ffdb19;
	background-color: #ffdb19;
	color: #212121;
}

.button-gray {
	border-color: #212121;
	background-color: #212121;
	color: #FAFAFA;
}

.button-gray:hover {
	background-color: transparent;
	color: #212121;
}

.button-yellow:hover {
	background-color: transparent;
	color: #fafafa;
}

.button-transparent {
  border-color: #FFEB3B;
}
.button-transparent:hover {
	background-color: #ffdb19;
	color: #212121;
}

/* contact */

.contact-container {
	min-height: 100vh;
	width: 100vw;
	background-color: #000000;
	background-image: url('../contact.webp');
	background-size: cover;
	position: relative;
}

.div-input {}

.textarea {
	width: 100%;
	min-height: 150px;
}

input {
	margin: 5px 0 5px 0;
	padding: 0;
}

.input {
	margin-left: 16px;
}

@media (max-width: 720px) {
  /* header */

  .h1 {
  	font-size: 30px;
  }

  .p {
    font-size: 18px;
  }

  .div-whatdo {
  	padding: 10px 0 0 20px;
  	display: flex;
  	flex-direction: column;
  	justify-content: center;
  	align-items: center;
  	text-align: start;
  }

  .div-whatdo  > .h1 {
  	width: 100%;
  }

  .div-whatdo > .p {
    width: 70%;
  }

}

